--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -24,7 +24,7 @@ jobs:
     - name: Build with Maven
       run: mvn -B package --file pom.xml
 
-  tesst:
+  test:
     needs: build
     
     runs-on: ubuntu-latest
