--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -38,3 +38,18 @@ jobs:
         distribution: 'adopt'
     - name: Test with Maven
       run: mvn test --file pom.xml
+      
+  deploy-dev:
+    needs: test
+    
+    runs-on: ubuntu-latest
+    
+    steps:
+    - name: Check out repository
+      uses: actions/checkout@v2
+    - name: Deploy to Heroku
+      uses: akhileshns/heroku-deploy@v3.12.12
+      with:
+        heroku_api_key: ${{ secrets.HEROKU_API_KEY_DEV }}
+        heroku_app_name: ${{ secrets.HEROKU_APP_NAME_DEV }}
+        heroku_email: ${{ secrets.HEROKU_EMAIL_DEV }}
