--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -7,4 +7,5 @@ spring.h2.console.enabled=true
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+spring.jpa.properties.format_sql=true
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
