--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,5 +1,6 @@
 spring.datasource.url=${DATABASE_URL}
 spring.datasource.driverClassName=org.postgresql.Driver
+spring.datasource.initialization-mode=always
 
 spring.jpa.hibernate.ddl-auto= create-drop
 spring.jpa.show-sql=true
